# template_project

./: .gitignore  CMakeLists.txt  README.md
cmake/: log.cmake
libs/: CMakeLists.txt
src/: CMakeLists.txt
